Java 11 updates